--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.lwjgl.lwjgl', name: 'lwjgl', version: '2.9.1'
     compile group: 'org.lwjgl.lwjgl', name: 'lwjgl_util', version: '2.9.1'
     compile group: 'org.l33tlabs.twl', name:'pngdecoder', version:'1.0'
-    compile 'org.newdawn.slick:slick-util:1.0'
-    compile 'net.sf.jopt-simple:jopt-simple:4.8'
+    compile group: 'org.newdawn.slick', name: 'slick-util', version: '1.0'
+    compile group: 'net.sf.jopt-simple', name:'jopt-simple', version:'4.8'
 }
