--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ repositories {
 dependencies {
     compile group: 'org.lwjgl.lwjgl', name: 'lwjgl', version: '2.9.1'
     compile group: 'org.lwjgl.lwjgl', name: 'lwjgl_util', version: '2.9.1'
-    compile group: 'org.l33tlabs.twl', name:'pngdecoder', version:'1.0'
+   // compile group: 'org.l33tlabs.twl', name:'pngdecoder', version:'1.0'
     compile group: 'org.newdawn.slick', name: 'slick-util', version: '1.0'
     compile group: 'net.sf.jopt-simple', name:'jopt-simple', version:'4.8'
+    compile group: 'org.slick2d', name: 'slick2d-core', version: '1.0.2'
 }
